opacity image overlap fixed

--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,7 @@ body {
 	padding: 1em;
 	background-color: #333333;
 	transition: top 0.5s ease-in-out;
+	z-index: 1;
 }
 
 .nav-up {
